perf: Added benchmarks.

--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -4,7 +4,7 @@
 
     <PropertyGroup Label="Signing">
         <SignAssembly>true</SignAssembly>
-        <AssemblyOriginatorKeyFile>$(SolutionDir)src\key.snk</AssemblyOriginatorKeyFile>
+        <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)../key.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
 
     <ItemGroup Label="CLSCompliant">
