--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -11,6 +11,7 @@
     <PackageVersion Include="MSTest.TestAdapter" Version="3.0.4" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageVersion Include="SharpToken" Version="1.0.28" />
+    <PackageVersion Include="System.ValueTuple" Version="4.5.0" />
     <PackageVersion Include="TiktokenSharp" Version="1.0.5" />
   </ItemGroup>
 </Project>
