feat: Embed encodings. Added new encodings.

--- a/src/libs/Tiktoken/Tiktoken.csproj
+++ b/src/libs/Tiktoken/Tiktoken.csproj
@@ -13,6 +13,10 @@
         <Using Remove="System.Net.Http" />
     </ItemGroup>
 
+    <ItemGroup Label="Resources">
+        <EmbeddedResource Include="Encodings/*.*" />
+    </ItemGroup>
+
     <ItemGroup Condition="'$(TargetFramework)' == 'net4.6.1'">
       <PackageReference Include="System.ValueTuple" />
     </ItemGroup>
