--- a/src/libs/Tiktoken/Tiktoken.csproj
+++ b/src/libs/Tiktoken/Tiktoken.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net4.6.1;netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     
     <PropertyGroup Label="NuGet">
