test: Added ConvertChinese test.

--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -3,7 +3,7 @@
     <Import Project="..\Directory.Build.props" />
 
     <PropertyGroup Label="Signing">
-        <SignAssembly>true</SignAssembly>
+        <SignAssembly>false</SignAssembly>
         <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)../key.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
 
