--- a/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
+++ b/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" />
+      <PackageReference Include="Microsoft.DeepDev.TokenizerLib" />
       <PackageReference Include="SharpToken" />
       <PackageReference Include="TiktokenSharp" />
     </ItemGroup>
