--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <PropertyGroup Label="Nuget">
-        <Version>1.0.2</Version>
+        <Version>1.1.0</Version>
         <GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Authors>tryAGI, aiqinxuancai and contributors</Authors>
@@ -24,9 +24,8 @@
     </PropertyGroup>
 
     <ItemGroup Label="Nuget">
-        <None Include="$(SolutionDir)assets\nuget_icon.png" Pack="true" PackagePath="\" Visible="false" />
-        <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="\" Visible="false" />
-        <None Include="$(SolutionDir)LICENSE.txt" Pack="true" PackagePath="\" Visible="false" />
+        <None Include="$(MSBuildThisFileDirectory)../../assets/nuget_icon.png" Pack="true" PackagePath="\" Visible="false" />
+        <None Include="$(MSBuildThisFileDirectory)../../README.md" Pack="true" PackagePath="\" Visible="false" />
     </ItemGroup>
 
     <PropertyGroup Label="Local NuGet Packages">
