--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,5 +11,6 @@ jobs:
     with:
       generate-build-number: false
       conventional-commits-publish-conditions: false
+      additional-test-arguments: '--logger GitHubActions'
     secrets:
       nuget-key: ${{ secrets.NUGET_KEY }}
