ci: Disabled caching.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,7 @@ jobs:
     with:
       generate-build-number: false
       conventional-commits-publish-conditions: false
+      enable-caching: false
       additional-test-arguments: '--logger GitHubActions'
     secrets:
       nuget-key: ${{ secrets.NUGET_KEY }}
