--- a/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
+++ b/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
+        <NoWarn>$(NoWarn);CS8002</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
