--- a/src/libs/Tiktoken/Tiktoken.csproj
+++ b/src/libs/Tiktoken/Tiktoken.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net4.6.1;netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <NoWarn>$(NoWarn);CA1724</NoWarn>
     </PropertyGroup>
     
     <PropertyGroup Label="NuGet">
