--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -16,5 +16,6 @@
     <PackageVersion Include="SharpToken" Version="1.2.8" />
     <PackageVersion Include="System.ValueTuple" Version="4.5.0" />
     <PackageVersion Include="TiktokenSharp" Version="1.0.6" />
+    <PackageVersion Include="Verify.MSTest" Version="20.8.2" />
   </ItemGroup>
 </Project>
