--- a/src/tests/Tiktoken.UnitTests/Tiktoken.UnitTests.csproj
+++ b/src/tests/Tiktoken.UnitTests/Tiktoken.UnitTests.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="MSTest.TestAdapter" />
     <PackageReference Include="MSTest.TestFramework" />
+    <PackageReference Include="Verify.MSTest" />
   </ItemGroup>
 
   <ItemGroup>
