--- a/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
+++ b/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\libs\Tiktoken.Core\Tiktoken.Core.csproj" />
       <ProjectReference Include="..\..\libs\Tiktoken\Tiktoken.csproj" />
     </ItemGroup>
 
