--- a/src/libs/Directory.Build.props
+++ b/src/libs/Directory.Build.props
@@ -9,7 +9,9 @@
     </ItemGroup>
 
     <PropertyGroup Label="Nuget">
-        <Version>1.2.0</Version>
+        <Version>2.0.0</Version>
+        <Description>The fastest tokenizer for GPT-3.5 and GPT-4 inspired by Tiktoken.</Description>
+        <PackageTags>chatgpt;openai;tiktoken;tokens;gpt-4;gpt-3.5-turbo;cl100k_base;p50k_base</PackageTags>
         <GeneratePackageOnBuild Condition=" '$(Configuration)' == 'Release' ">true</GeneratePackageOnBuild>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <Authors>tryAGI, aiqinxuancai and contributors</Authors>
