benchmark: Added Microsoft.ML.Tokenizers.

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -12,6 +12,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="Microsoft.DeepDev.TokenizerLib" Version="1.3.3" />
+    <PackageVersion Include="Microsoft.ML.Tokenizers" Version="1.0.0" />
+    <PackageVersion Include="Microsoft.ML.Tokenizers.Data.Cl100kBase" Version="1.0.0" />
     <PackageVersion Include="MSTest" Version="3.6.3" />
     <PackageVersion Include="PolySharp" Version="1.14.1">
       <PrivateAssets>all</PrivateAssets>
