--- a/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
+++ b/src/benchmarks/Tiktoken.Benchmarks/Tiktoken.Benchmarks.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" />
       <PackageReference Include="Microsoft.DeepDev.TokenizerLib" />
+      <PackageReference Include="Microsoft.ML.Tokenizers" />
+      <PackageReference Include="Microsoft.ML.Tokenizers.Data.Cl100kBase" />
       <PackageReference Include="SharpToken" />
       <PackageReference Include="TiktokenSharp" />
     </ItemGroup>
